# nido

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOYED.md  README.md  justfile  package-lock.json  package.json  playwright.config.ts  vitest.support.config.ts
.github/workflows/: bootstrap-relayer.yml  deploy-relayer.yml  deploy.yml  example-preview.yml  npm-publish.yml  pages.yml  preview.yml  relayer-secrets-check.yml  test-testnet.yml  test.yml
contracts/factory/: Cargo.toml  build.rs
contracts/factory/src/: contract.rs  lib.rs  xlm.rs
contracts/factory/test_snapshots/contract/test/: account_wasm_hash_caches_first_computation.1.json  account_wasm_hash_equals_uploaded_wasm_hash.1.json  admin_is_set_at_construct_time.1.json  get_c_address_uses_random_salt.1.json  resolve_caches_after_first_lookup.1.json  set_admin_requires_auth.1.json  set_admin_requires_current_admin_auth.1.json  set_admin_rotates_admin.1.json  upgrade_requires_admin_auth_and_succeeds.1.json
contracts/multisig-policy/: Cargo.toml
contracts/multisig-policy/src/: contract.rs
contracts/name-registry/: Cargo.toml
contracts/name-registry/src/: contract.rs
contracts/name-registry/test_snapshots/contract/test/: duplicate_name_rejected.1.json  duplicate_owner_rejected.1.json  max_length_name.1.json  name_with_digits.1.json  register_and_resolve.1.json  release_frees_name.1.json  single_char_name.1.json  transfer_fails_if_target_has_name.1.json  transfer_updates_both_maps.1.json
contracts/smart-account/: Cargo.toml
contracts/smart-account/src/: contract.rs
contracts/spending-limit-policy/: Cargo.toml
contracts/spending-limit-policy/src/: contract.rs  lib.rs
contracts/status-message/: Cargo.toml
contracts/webauthn-verifier/: Cargo.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/test_snapshots/contract_verifier/: reject_wrong_key_on_chain.1.json  verify_webauthn_assertion_on_chain.1.json
crates/integration-tests/test_snapshots/default_rule_threshold/: policy_first_rotation_never_bricks.1.json  policyless_two_signer_default_rule_accepts_both_signatures.1.json  policyless_two_signer_default_rule_rejects_single_signature.1.json  threshold_policy_repair_restores_single_signature.1.json
crates/integration-tests/test_snapshots/multisig_recovery/: one_friend_signature_is_rejected.1.json  two_friend_signatures_pass_for_self_scope.1.json  two_friend_signatures_rejected_for_other_contract.1.json
crates/integration-tests/test_snapshots/name_registry/: register_name_via_smart_account.1.json  release_name_via_smart_account.1.json  resolve_unregistered_returns_none.1.json
crates/integration-tests/test_snapshots/scoped_session_key/: session_key_authorizes_target_contract.1.json  session_key_rejected_after_revoke.1.json  session_key_rejected_after_valid_until.1.json  session_key_rejected_for_other_contract.1.json
crates/integration-tests/test_snapshots/smart_account_auth/: smart_account_check_auth_rejects_wrong_key.1.json  smart_account_check_auth_with_passkey.1.json
crates/integration-tests/test_snapshots/smart_account_scoping/: add_scoped_context_rule.1.json  expired_session_key_rejected.1.json  removed_session_key_rejected.1.json  session_key_authorizes_within_scope.1.json  session_key_rejected_outside_scope.1.json
crates/integration-tests/test_snapshots/smart_account_setup/: default_context_rule_is_default_type.1.json  deploy_with_passkey_signer.1.json
crates/integration-tests/test_snapshots/spending_limit_policy/: over_limit_rejected.1.json  raised_limit_mid_window_keeps_spent_total.1.json  window_roll_allows_again.1.json  within_limit_transfer_authorizes.1.json
crates/integration-tests/tests/it/: contract_verifier.rs  default_rule_threshold.rs  main.rs  multisig_recovery.rs  name_registry.rs  name_registry_passkey_auth.rs  scoped_session_key.rs  smart_account_auth.rs  smart_account_scoping.rs  smart_account_setup.rs  spending_limit_policy.rs
docs/: APPLICATION.md  REQUIREMENTS.md  USAGE.md
docs/blog/: 01-stellar-smart-accounts-oz-standard.md  02-how-g2c-uses-oz-smart-accounts.md  03-passkeys-and-on-chain-webauthn.md  README.md
docs/superpowers/plans/: 2026-05-29-policy-builder-v1.md  2026-06-01-nido-desktop-responsive.md  2026-06-02-passkey-test-harness-phase1.md  2026-06-02-passkey-test-harness-phase2.md  2026-06-02-passkey-test-harness-phase3a-dapp-sep7.md  2026-06-02-passkey-test-harness-phase3b-recovery.md  2026-06-02-passkey-test-harness-phase3b-session-key.md  (+7 more)
examples/status-message-dapp/: .env.example  .gitignore  Cargo.toml  README.md  environments.toml  index.html  package.json  rust-toolchain.toml  tsconfig.node.json  vite.config.ts  vitest.config.ts
examples/status-message-dapp/contracts/status-message/: Cargo.toml
examples/status-message-dapp/contracts/status-message/src/: contract.rs
examples/status-message-dapp/scripts/: build-pages.mjs
examples/status-message-dapp/src/: App.module.css  App.tsx  main.tsx
examples/status-message-dapp/src/components/: StatusMessage.module.css  StatusMessage.tsx  WalletButton.tsx
examples/status-message-dapp/src/contracts/: status_message.ts  util.ts
examples/status-message-dapp/src/lib/: delegationHandover.test.ts  delegationHandover.ts  nidoSign.ts  passkeySheet.ts  policyChainFetch.ts  sessionKeyStatus.test.ts  sessionKeyStatus.ts
examples/status-message-dapp/src/pages/: Home.tsx
examples/status-message-dapp/src/providers/: WalletProvider.tsx
examples/status-message-dapp/src/util/: moduleOrder.test.ts  moduleOrder.ts  wallet.ts  walletModules.ts
frontend/worker-proxy/: index.js
frontend/worker-proxy-nido/: index.js  wrangler.toml
infra/relayer/: Caddyfile  Dockerfile  README.md  entrypoint.sh  fly.toml
scripts/: deploy-policy-builder-v1.sh  fix-bindings.sh  relayer-proof.mjs
tests/: README.md
tests/e2e/: account-name.spec.ts
tests/spikes/: testingbot-android-shim.spike.mjs
tests/support/: cdp.ts  example-server.mjs  fixtures.ts  recovery.ts  server.mjs  sessionKey.ts  testnet.test.ts  testnet.ts
tests/support/auth/: der.ts  (+17 more)
(+35 files in other folders)
