[package]
name = "nido-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
# Soroban
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-accounts = { workspace = true }

# Crypto
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

# Encoding
base64 = { workspace = true }
