[package]
name = "status-message"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.stellar]
contract = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-sdk-tools = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
